core/include/raft.h

typedef uint32_t RftError;
/**
 * Opaque handle wrapping a [`Database`] and its async runtime.
 *
 * Allocated on the heap by [`rft_open`](super::rft_open) and freed by
 * [`rft_close`](super::rft_close). C callers treat it as `*mut c_void`.
 */
typedef struct RaftDb RaftDb;
/**
 * Open or create a database at `path`.
 *
 * Returns a non-null handle on success, or null on failure (check
 * `out_err` for the error code).
 *
 * # Safety
 *
 * - `path` must be a valid null-terminated UTF-8 C string.
 * - `out_err` must be a valid pointer to an `RftError`.
 */
struct RaftDb *rft_open(const char *path, RftError *out_err);
/**
 * Close and free a database handle. Aborts any pending observer tasks,
 * then blocks until the observer runtime has fully shut down — after
 * this returns, no observer callback will ever fire again, so the
 * caller may safely free any `user_data` it passed to `rft_observe`.
 *
 * # Safety
 *
 * - `db` must be a handle returned by [`rft_open`], or null (no-op).
 *   Passing an already-closed or foreign pointer is a safe no-op.
 * - No other thread may be using `db` concurrently with this call.
 * - Must not be called from inside an observer callback (deadlock).
 * - After this call, `db` is dangling and must not be used.
 */
void rft_close(struct RaftDb *db);
/**
 * Insert or update a key-value pair on the raw engine.
 *
 * # Safety
 *
 * - `db` must be a valid, non-null handle from [`rft_open`].
 * - `key` must point to at least `key_len` readable bytes.
 * - `value` must point to at least `value_len` readable bytes.
 */
RftError rft_put(struct RaftDb *db,
                 const uint8_t *key,
                 uintptr_t key_len,
                 const uint8_t *value,
                 uintptr_t value_len);
/**
 * Look up a key on the raw engine.
 *
 * On success, writes the value into the caller-provided buffer at
 * `out_value` and sets `*out_len` to the number of bytes written.
 *
 * If the buffer is too small, returns [`RftError::BufferTooSmall`] and
 * sets `*out_len` to the required size (no bytes are written).
 *
 * If the key is not found, returns [`RftError::NotFound`].
 *
 * # Safety
 *
 * - `db` must be a valid, non-null handle from [`rft_open`].
 * - `key` must point to at least `key_len` readable bytes.
 * - `out_value` must point to a buffer of at least `*out_len` writable
 *   bytes, or be null if only querying the required size.
 * - `out_len` must be a valid, non-null pointer to a `usize`.
 */
RftError rft_get(struct RaftDb *db,
                 const uint8_t *key,
                 uintptr_t key_len,
                 uint8_t *out_value,
                 uintptr_t *out_len);
/**
 * Delete a key on the raw engine.
 *
 * Returns [`RftError::Ok`] on success. Deleting a non-existent key is
 * not an error (it writes a tombstone).
 *
 * # Safety
 *
 * - `db` must be a valid, non-null handle from [`rft_open`].
 * - `key` must point to at least `key_len` readable bytes.
 */
RftError rft_delete(struct RaftDb *db, const uint8_t *key, uintptr_t key_len);