flutter/lib/src/raft_db_bindings.dart

// AUTO-GENERATED — do not edit.
// Generated by dart run ffigen from raft.h.
// ignore_for_file: unused_element, unused_field, camel_case_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Raw FFI bindings for raft-db C API.
class RaftDbBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RaftDbBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RaftDbBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Open or create a database at `path`.
  ///
  /// Returns a non-null handle on success, or null on failure (check
  /// `out_err` for the error code).
  ///
  /// # Safety
  ///
  /// - `path` must be a valid null-terminated UTF-8 C string.
  /// - `out_err` must be a valid pointer to an `RftError`.
  ffi.Pointer<RaftDb> rft_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint32> out_err,
  ) {
    return _rft_open(
      path,
      out_err,
    );
  }

  late final _rft_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<RaftDb> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint32>)>>('rft_open');
  late final _rft_open = _rft_openPtr.asFunction<
      ffi.Pointer<RaftDb> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint32>)>();

  /// Close and free a database handle.
  ///
  /// # Safety
  ///
  /// - `db` must be a handle returned by [`rft_open`], or null (no-op).
  /// - After this call, `db` is dangling and must not be used.
  void rft_close(
    ffi.Pointer<RaftDb> db,
  ) {
    return _rft_close(
      db,
    );
  }

  late final _rft_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<RaftDb>)>>(
          'rft_close');
  late final _rft_close =
      _rft_closePtr.asFunction<void Function(ffi.Pointer<RaftDb>)>();

  /// Insert or update a key-value pair.
  ///
  /// # Safety
  ///
  /// - `db` must be a valid, non-null handle from [`rft_open`].
  /// - `key` must point to at least `key_len` readable bytes.
  /// - `value` must point to at least `value_len` readable bytes.
  int rft_put(
    ffi.Pointer<RaftDb> db,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
  ) {
    return _rft_put(
      db,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _rft_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<RaftDb>, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr, ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('rft_put');
  late final _rft_put = _rft_putPtr.asFunction<
      int Function(ffi.Pointer<RaftDb>, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Uint8>, int)>();

  /// Look up a key.
  ///
  /// On success, writes the value into the caller-provided buffer at
  /// `out_value` and sets `*out_len` to the number of bytes written.
  ///
  /// If the buffer is too small, returns [`RftError::BufferTooSmall`] and
  /// sets `*out_len` to the required size (no bytes are written).
  ///
  /// If the key is not found, returns [`RftError::NotFound`].
  ///
  /// # Safety
  ///
  /// - `db` must be a valid, non-null handle from [`rft_open`].
  /// - `key` must point to at least `key_len` readable bytes.
  /// - `out_value` must point to a buffer of at least `*out_len` writable
  /// bytes, or be null if only querying the required size.
  /// - `out_len` must be a valid, non-null pointer to a `usize`.
  int rft_get(
    ffi.Pointer<RaftDb> db,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> out_value,
    ffi.Pointer<ffi.UintPtr> out_len,
  ) {
    return _rft_get(
      db,
      key,
      key_len,
      out_value,
      out_len,
    );
  }

  late final _rft_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<RaftDb>,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.UintPtr>)>>('rft_get');
  late final _rft_get = _rft_getPtr.asFunction<
      int Function(ffi.Pointer<RaftDb>, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.UintPtr>)>();

  /// Delete a key.
  ///
  /// Returns [`RftError::Ok`] on success. Deleting a non-existent key is
  /// not an error (it writes a tombstone).
  ///
  /// # Safety
  ///
  /// - `db` must be a valid, non-null handle from [`rft_open`].
  /// - `key` must point to at least `key_len` readable bytes.
  int rft_delete(
    ffi.Pointer<RaftDb> db,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _rft_delete(
      db,
      key,
      key_len,
    );
  }

  late final _rft_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<RaftDb>, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('rft_delete');
  late final _rft_delete = _rft_deletePtr.asFunction<
      int Function(ffi.Pointer<RaftDb>, ffi.Pointer<ffi.Uint8>, int)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class sigval extends ffi.Union {
  @ffi.Int()
  external int sival_int;

  external ffi.Pointer<ffi.Void> sival_ptr;
}

final class __siginfo extends ffi.Struct {
  @ffi.Int()
  external int si_signo;

  @ffi.Int()
  external int si_errno;

  @ffi.Int()
  external int si_code;

  @ffi.Int()
  external int si_pid;

  @ffi.UnsignedInt()
  external int si_uid;

  @ffi.Int()
  external int si_status;

  external ffi.Pointer<ffi.Void> si_addr;

  external sigval si_value;

  @ffi.Long()
  external int si_band;

  @ffi.Array.multi([7])
  external ffi.Array<ffi.UnsignedLong> __pad;
}

final class __sigaction_u extends ffi.Union {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>
      __sa_handler;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int, ffi.Pointer<__siginfo>, ffi.Pointer<ffi.Void>)>>
      __sa_sigaction;
}

final class wait extends ffi.Opaque {}

/// Error codes returned by all `rft_*` functions.
///
/// Represented as a `#[repr(u32)]` enum for stable C ABI. Zero means
/// success; non-zero values indicate specific error conditions.
enum RftError {
  /// Operation succeeded.
  RFT_ERROR_OK(0),

  /// A required pointer argument was null.
  RFT_ERROR_NULL_POINTER(1),

  /// A string argument was not valid UTF-8.
  RFT_ERROR_INVALID_UTF8(2),

  /// An I/O or storage engine error occurred.
  RFT_ERROR_IO_ERROR(3),

  /// The requested key was not found.
  RFT_ERROR_NOT_FOUND(4),

  /// The caller-provided buffer is too small. Check `out_len` for the
  /// required size.
  RFT_ERROR_BUFFER_TOO_SMALL(5);

  final int value;
  const RftError(this.value);

  static RftError fromValue(int value) => switch (value) {
        0 => RFT_ERROR_OK,
        1 => RFT_ERROR_NULL_POINTER,
        2 => RFT_ERROR_INVALID_UTF8,
        3 => RFT_ERROR_IO_ERROR,
        4 => RFT_ERROR_NOT_FOUND,
        5 => RFT_ERROR_BUFFER_TOO_SMALL,
        _ => throw ArgumentError("Unknown value for RftError: $value"),
      };
}

final class RaftDb extends ffi.Opaque {}

const int __bool_true_false_are_defined = 1;

const int true1 = 1;

const int false1 = 0;

const int __WORDSIZE = 64;

const int __has_safe_buffers = 0;

const int __DARWIN_ONLY_64_BIT_INO_T = 0;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 0;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_64_BIT_INO_T = '\$INODE64';

const String __DARWIN_SUF_1050 = '\$1050';

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int __API_TO_BE_DEPRECATED = 100000;

const int __API_TO_BE_DEPRECATED_MACOS = 100000;

const int __API_TO_BE_DEPRECATED_MACOSAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_IOS = 100000;

const int __API_TO_BE_DEPRECATED_IOSAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_MACCATALYST = 100000;

const int __API_TO_BE_DEPRECATED_MACCATALYSTAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_WATCHOS = 100000;

const int __API_TO_BE_DEPRECATED_WATCHOSAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_TVOS = 100000;

const int __API_TO_BE_DEPRECATED_TVOSAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_DRIVERKIT = 100000;

const int __API_TO_BE_DEPRECATED_VISIONOS = 100000;

const int __API_TO_BE_DEPRECATED_VISIONOSAPPLICATIONEXTENSION = 100000;

const int __API_TO_BE_DEPRECATED_KERNELKIT = 100000;

const int __MAC_10_0 = 1000;

const int __MAC_10_1 = 1010;

const int __MAC_10_2 = 1020;

const int __MAC_10_3 = 1030;

const int __MAC_10_4 = 1040;

const int __MAC_10_5 = 1050;

const int __MAC_10_6 = 1060;

const int __MAC_10_7 = 1070;
